fixed spacing between sections

--- a/web/src/Components/QForm/QForm.css
+++ b/web/src/Components/QForm/QForm.css
@@ -8,7 +8,7 @@
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 4%;
-    margin-bottom: 8%;
+    margin-bottom: 13%;
     font-family: "Rajdhani";
 }
 
